<resources>
    <string name="app_name">dz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate">Calculate</string>
    <string name="me">Me</string>
    <string name="second_name">Second name</string>
    <string name="you">You</string>
    <string name="first_name">First Name</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="try_again">Try Again</string>
    <string name="sm_text_about_this_percentage">SM text about this percentage</string>
    <string name="_100">100%</string>
    <string name="your_score">Your Score</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="exampleText">exampleText</string>
    <string name="description">description</string>
    <string name="history">History</string>
    <string name="ravno">=</string>
</resources>