<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/starts" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        android:text="@string/love_calculator"
        android:textColor="#6d64ff"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="40dp"
        android:text="@string/first_name"
        android:textColor="?android:actionBarWidgetTheme"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/first_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_bd"
        android:hint="@string/you"
        android:inputType="text"
        android:padding="15dp"
        android:paddingStart="30dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="40dp"
        android:text="@string/second_name"
        android:textColor="?android:actionBarWidgetTheme"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/second_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_bd"
        android:hint="@string/me"
        android:inputType="text"
        android:padding="15dp"
        android:paddingStart="30dp"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="30dp"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textColor="?android:actionBarWidgetTheme"
        android:textSize="18sp"
        app:cornerRadius="30dp" />

    <ImageView
        android:id="@+id/btnHistory"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_history" />


</LinearLayout>